# lichess-bot

./: README.md  homemade.py  llm_uci_engine.py  log_visualizer.py  main.py  pyproject.toml
lib/: config.py
lib/lichess_bot.egg-info/: PKG-INFO
templates/: game.html  index.html
